--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -14,8 +14,8 @@
       <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8 mt-10">
         <!-- Dashboard Overview Card -->
         <div class="bg-white rounded-lg shadow-md p-6">
-          <h2 class="text-xl font-semibold text-blue-600">Dashboard</h2>
-          <p class="mt-2 text-gray-600">Get an overview of your application’s performance and usage.</p>
+          <a href='seller_dashboard/'><h2 class="text-xl font-semibold text-blue-600">Dashboard</h2>
+          <p class="mt-2 text-gray-600">Get an overview of your application’s performance and usage.</p></a>
         </div>
 
         <!-- User Management Card -->
