--- a/app/templates/add_property.html
+++ b/app/templates/add_property.html
@@ -42,7 +42,7 @@
         </form>
 
         <div class="mt-4 text-center">
-            <a href="/seller/" class="text-blue-600 hover:underline">Back to Dashboard</a>
+            <a href="{% url 'home' %}" class="text-blue-600 hover:underline">Back to home page</a>
         </div>
     </div>
 
