--- a/app/templates/property.html
+++ b/app/templates/property.html
@@ -31,10 +31,9 @@
               <strong>Id:</strong> {{ item.id }}
             </p>
             {% if item.image %}
-              <img src="{{ item.image.url }}" alt="{{ item.name }}" 
-              class="mt-4 rounded-md" 
-              style="max-width: 200px; max-height: 150px;" /> <!-- Smaller image size -->
-            {% endif %}
+  <img src="{{ item.image.url }}" alt="{{ item.title }}" 
+       class="mt-4 rounded-md max-w-full max-h-72 object-contain" />
+{% endif %}
             
             <a href="{% url 'book_property' item.id %}" class="inline-block bg-blue-600 text-white py-2 px-4 rounded-lg hover:bg-blue-700 transition duration-300 mt-4">
               View Details
